src/test/resources/testinput/cocos/valid/validMethSigName.ocl
/* (c) https://github.com/MontiCore/monticore */
import example.CDs.DefaultTypes.*;
import example.CDs.AuctionCD.*;

ocl validMethSigName {
  context boolean Person.personalMsg()
  pre: true;
  post: result == [m in Person.message | !m.isAuctionSpecific()];
}
