src/test/resources/testinput/cocos/invalid/invalidPrePost.ocl
/* (c) https://github.com/MontiCore/monticore */
ocl invalidPrePost {
  context boolean BidMessage.isAuctionsSpecific()
  
}
